@@ -1,3 +1,7 @@
+Sun Jun 13 04:27:55 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/delegate.rb: Delegate !=, eql? and hash [ruby-core:26139]
+
 Sun Jun 13 02:17:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* enc/trans/utf8_mac.trans (buf_apply): fix for patterns
